--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     "laravel/tinker": "^2.7",
     "laravel/ui": "^4.2",
     "laravelcollective/html": "^6.3",
+    "mallardduck/blade-boxicons": "^2.3",
     "spatie/laravel-permission": "^5.8"
   },
   "require-dev": {
