--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
   "license": "MIT",
   "require": {
     "php": "^8.0.2",
+    "andreiio/blade-remix-icon": "^1.1",
+    "blade-ui-kit/blade-heroicons": "^2.1",
     "fruitcake/laravel-cors": "^2.0.5",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^9.0",
